@@ -109,6 +109,19 @@ to print the corresponding values, or T for all of them.")
             (ext::browse-url doc :out stream)
             (format stream name doc))))))
 
+(defvar *squeeze-string-max* 100)
+(defvar *squeeze-string-section* 10) ; at most half of *squeeze-string-max*
+(defun squeeze-string (string &key (start 0) (end (length string)))
+  (let* ((len (length string))
+         (prefix (if (= start 0) "" "..."))
+         (suffix (if (= end len) "" "...")))
+    (cond ((> *squeeze-string-max* len) string)
+          ((> *squeeze-string-max* (- end start))
+           (string-concat prefix (subseq string start end) suffix))
+          (t (string-concat
+              prefix (subseq string start (+ start *squeeze-string-section*))
+              "..." (subseq string (- end *squeeze-string-section*)) suffix)))))
+
 (clos:defgeneric describe-object (obj stream)
   (:method ((obj t) (stream stream))
     (ecase (type-of obj)
@@ -377,7 +390,15 @@ to print the corresponding values, or T for all of them.")
   (:method ((obj stream) (stream stream))
     (format stream (TEXT "a~:[~:[ closed ~;n output-~]~;~:[n input-~;n input/output-~]~]stream.")
             (and (input-stream-p obj) (open-stream-p obj))
-            (and (output-stream-p obj) (open-stream-p obj))))
+            (and (output-stream-p obj) (open-stream-p obj)))
+    (when (sys::string-stream-p obj)
+      (multiple-value-bind (string start end) (sys::string-stream-string obj)
+        (if (and start end)     ; STRING-INPUT-STREAM
+            (format stream (TEXT " It reads from ~S from ~:D to ~:D at ~:D.")
+                    (squeeze-string string :start start :end end)
+                    start end (sys::string-input-stream-index obj))
+            (format stream (TEXT " It appends to ~S.")
+                    (squeeze-string string))))))
   (:method ((obj package) (stream stream))
     (if (package-name obj)
       (progn
@@ -596,7 +617,7 @@ to print the corresponding values, or T for all of them.")
 ;; auxiliary functions for DESCRIBE of FUNCTION
 
 (defun arglist (func)
-  (cond ((and (symbolp func) (fboundp func) 
+  (cond ((and (symbolp func) (fboundp func)
               (sys::macrop (symbol-function func)))
          (sys::macro-lambda-list (symbol-function func)))
         ((typep (setq func (coerce func 'function)) 'generic-function)
